--- a/add.html
+++ b/add.html
@@ -9,11 +9,12 @@
 </head>
 
 <body>
-    <h1>GET [title]</h1>
+    <h1>GET [all]</h1>
     <form method="GET" action="/todos">
         <button type="submit">Get All!</button>
     </form>
-    <br>
+
+    <h1>GET [title]</h1>
     <form method="GET" action="/todos">
         <input type="text" placeholder="Title" name="title">
         <button type="submit">Get!</button>
