Implemented PATCH method!

--- a/add.html
+++ b/add.html
@@ -33,6 +33,14 @@
         <input type="text" placeholder="Title" name="title">
         <button type="submit">Delete!</button>
     </form>
+
+    <h1>PATCH [check and edit based on title]</h1>
+    <form method="POST" action="/todos?_method=patch">
+        <input type="text" placeholder="Title" name="title">
+        <input type="text" placeholder="Description" name="description">
+        <input type="text" placeholder="Status" name="status">
+        <button type="submit">Add!</button>
+    </form>
 </body>
 
 </html>
