Implemented PATCH method!

--- a/add.html
+++ b/add.html
@@ -39,7 +39,7 @@
         <input type="text" placeholder="Title" name="title">
         <input type="text" placeholder="Description" name="description">
         <input type="text" placeholder="Status" name="status">
-        <button type="submit">Add!</button>
+        <button type="submit">Modify!</button>
     </form>
 </body>
 
